Use `var` for local variable declarations across modules.