@@ -4,11 +4,9 @@ import it.unimi.dsi.fastutil.Pair;
 import it.unimi.dsi.fastutil.objects.Object2IntMap;
 import it.unimi.dsi.fastutil.objects.Object2IntOpenHashMap;
 
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
 
 public final class Dijkstra<E> {
     private final Map<E, List<Pair<E, Integer>>> graph;
@@ -18,14 +16,14 @@ public final class Dijkstra<E> {
     }
 
     public Object2IntMap<E> computeDistance(E start) {
-        Object2IntMap<E> distance = new Object2IntOpenHashMap<>();
+        var distance = new Object2IntOpenHashMap<E>();
         distance.put(start, 0);
 
-        Set<E> nodes = new HashSet<>(graph.keySet());
+        var nodes = new HashSet<E>(graph.keySet());
 
         while (!nodes.isEmpty()) {
             E next = null;
-            int minimum = Integer.MAX_VALUE;
+            var minimum = Integer.MAX_VALUE;
             for (E node : nodes) {
                 if (distance.getOrDefault(node, Integer.MAX_VALUE) < minimum) {
                     next = node;
@@ -39,7 +37,7 @@ public final class Dijkstra<E> {
 
             nodes.remove(next);
 
-            for (Pair<E, Integer> edge : graph.getOrDefault(next, Collections.emptyList())) {
+            for (Pair<E, Integer> edge : graph.getOrDefault(next, List.of())) {
                 if (distance.getOrDefault(edge.left(), Integer.MAX_VALUE) > minimum + edge.right()) {
                     distance.put(edge.left(), minimum + edge.right());
                 }
